RESOLVED FIXED144267
REGRESSION(r182879): Images and video can no longer be downloaded
https://bugs.webkit.org/show_bug.cgi?id=144267
Summary REGRESSION(r182879): Images and video can no longer be downloaded
Brent Fulgham
Reported 2015-04-27 10:41:40 PDT
While working on Bug 143794, I broke the ability to download image and media content (see <http://trac.webkit.org/changeset/182879>) because I enable the download state on whether the link protocol is type 'file'. Instead, I should have been checking for NOT file.
Attachments
Patch (4.17 KB, patch)
2015-04-27 10:46 PDT, Brent Fulgham
simon.fraser: review+
Brent Fulgham
Comment 1 2015-04-27 10:45:24 PDT
Brent Fulgham
Comment 2 2015-04-27 10:46:14 PDT
Simon Fraser (smfr)
Comment 3 2015-04-27 10:50:19 PDT
Comment on attachment 251757 [details] Patch Is this not testable? Also sad that we have the same code in 4 places. Can you at least reduce that to 2?
Brent Fulgham
Comment 4 2015-04-27 11:38:11 PDT
Added tests to TestWebKITAPI while landing.
Brent Fulgham
Comment 5 2015-04-27 11:39:40 PDT
Note You need to log in before you can comment on or make changes to this bug.