REGRESSION(r182879): Images and video can no longer be downloaded https://bugs.webkit.org/show_bug.cgi?id=144267 <rdar://problem/20702844>

Reviewed by Simon Fraser.

Source/WebKit/mac:

* WebView/WebActionMenuController.mm:
(-[WebActionMenuController _createActionMenuItemForTag:]): Check for
"!WebCore::protocolIs(..., "file")" for image and media downloads.

Source/WebKit2:

* UIProcess/mac/WKActionMenuController.mm:
(-[WKActionMenuController _createActionMenuItemForTag:]): Check for
"!WebCore::protocolIs(..., "file")" for image and media downloads.

Tools:

Revise tests to check for proper download menu state.
1. Downloading a loal image should be disabled.
2. Downloading a local media file should be disabled.
3. Downloading non-downloadable media should be disabled.

* TestWebKitAPI/Tests/WebKit2ObjC/ActionMenus.mm:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/162267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183403 268f45cc-cd09-0410-ab3c-d52691b4dbfc